--- a/css/styles.css
+++ b/css/styles.css
@@ -279,6 +279,7 @@ a {
     line-height: 1.11;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-align: left;
 }
 
 .mob-nav-link.current {
@@ -287,6 +288,7 @@ a {
 
 .mob-menu-contacts {
     margin-bottom: 48px;
+    font-style: normal;
 }
 
 .mob-contacts-list {
@@ -705,10 +707,6 @@ a {
         0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-item:hover {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
 .portfolio-name {
     font-weight: 500;
     font-size: 20px;
@@ -777,10 +775,17 @@ a {
         gap: 48px 24px;
     }
 
-.portfolio-item {
-    width: calc((100% - 48px) / 3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    .portfolio-item {
+        width: calc((100% - 2 * 24px) / 3);
+        box-shadow: none;
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .portfolio-item:hover {
+        box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+            0 1px 1px 0 rgba(46, 47, 66, 0.16),
+            0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    }
 }
 
 /* ----------- Footer --------------- */
@@ -816,6 +821,10 @@ a {
     margin-bottom: 16px;
 }
 
+.footer-logo .logo-part {
+    color: #f4f4fd;
+}
+
 .footer-text {
     font-weight: 400;
     font-size: 16px;
@@ -825,6 +834,13 @@ a {
     max-width: 264px;
 }
 
+.footer-social{
+    text-align: center;
+}
+
+.footer-sub {
+    text-align: center;
+}
 
 
 .footer-social-title {
@@ -846,6 +862,7 @@ a {
     width: 40px;
     height: 40px;
 }
+
 
 
 
@@ -952,6 +969,14 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+    .footer-social {
+        text-align: left;
+        }
+    
+        .footer-sub {
+        text-align: left;
+        }
+
     .footer-container {
         flex-direction: row;
         flex-wrap: wrap;
